# browser-bot

./: .pre-commit-config.yaml  CLAUDE.md  README.md  browser_bot.py  browser_bot_cli.py  launch-chrome-guest.sh  launch-chrome.sh  launch-mcp-server.sh  launch.sh  logging_config.py  mcp_server.py  pyproject.toml  selenium_remote.py  test-run.sh  test_direct_function.py
tests/: test-initialize.sh  test-mcp-browser-snapshot.sh  test-mcp-browser-use.sh  test-mcp-get-current-url.sh  test-mcp-get-page-source.sh  test-mcp-initialize.sh  test-mcp-launch-chrome.sh  test-mcp-request-get.sh  test-mcp-super-reload-with-url.sh  test-mcp-super-reload.sh  test-mcp-tools-list.sh  test-python-script.sh  test-run-with-path.sh  test-run.sh  test-script-return.sh  test-script.sh  test-scroll-screenshot.sh  test-tools-list.sh
