[project]
name = "cyberneura-id-svelte-testbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.2",
    "fastmcp>=2.8.1",
    "httpx>=0.28.1",
    "pillow>=11.2.1",
    "playwright>=1.56.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
# uv sync --extra test
test = []

# uv sync --extra selenium-remote
selenium-remote = [
    "selenium>=4.27.1",
]
